작업 중인 변경 사항 커밋

--- a/react1/reacthomework/.gitignore
+++ b/react1/reacthomework/.gitignore
@@ -4,10 +4,8 @@
 /node_modules
 /.pnp
 .pnp.js
-.package.json
-/yarn.lock
-../node_modules/
-        ../package.json
+package.json
+yarn.lock
 
 # testing
 /coverage
