--- a/react 과제/package.json
+++ b/react 과제/package.json
@@ -15,11 +15,13 @@
     "@types/react-redux": "^7.1.33",
     "@types/react-router-dom": "^5.3.3",
     "badwords-ko": "^1.0.4",
+    "mongoose": "^8.6.3",
     "normalize.css": "^8.0.1",
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.26.2",
     "react-scripts": "^5.0.1",
@@ -55,6 +57,7 @@
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.20",
+    "daisyui": "^4.12.10",
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12"
   }
