--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
     },
     "dependencies": {
         "@tailwindcss/typography": "^0.5.15",
+        "axios": "^1.7.7",
         "next": "14.2.12",
         "pretendard": "^1.3.9",
         "react": "^18.3.1",
