--- a/React/reactproject/package.json
+++ b/React/reactproject/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
@@ -40,6 +41,11 @@
     ]
   },
   "devDependencies": {
-    "@types/node": "^22.6.1"
+    "@eslint/js": "^9.11.1",
+    "@types/node": "^22.6.1",
+    "eslint": "^9.11.1",
+    "eslint-plugin-react": "^7.36.1",
+    "globals": "^15.9.0",
+    "typescript-eslint": "^8.7.0"
   }
 }
