--- a/React/reactproject/tsconfig.json
+++ b/React/reactproject/tsconfig.json
@@ -17,6 +17,6 @@
       "noFallthroughCasesInSwitch": true,
       "resolveJsonModule": true,
       "skipLibCheck": true,
-      "strict": true
+      "strict": true,
     }
   }
