--- a/03-trip/React-homework/package.json
+++ b/03-trip/React-homework/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
+    "eslint-config-react-app": "^7.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.2",
