CNA 마이그레이션 및 page.tsx에 css 연결

--- a/myhomework/Day19/tsconfig.json
+++ b/myhomework/Day19/tsconfig.json
@@ -5,8 +5,8 @@
   "compilerOptions": {
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "esnext",
-    "moduleResolution": "bundler",
-    "target": "es2015",
+    "moduleResolution": "node",
+    "target": "es6",
 
     "allowJs": true,
     "allowSyntheticDefaultImports": true,
