--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -9,13 +9,16 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.7",
     "dotenv": "^16.4.5",
     "next": "14.2.13",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-hook-form": "^7.53.0",
-    "react-quill-new": "^3.3.2"
+    "react-quill-new": "^3.3.2",
+    "react-redux": "^9.1.2",
+    "redux": "^5.0.1"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
