[240925] DAY20 윤준수 과제 완료

--- a/trip-talk/tsconfig.app.json
+++ b/trip-talk/tsconfig.app.json
@@ -18,7 +18,19 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "paths": {
+      "@/*": ["/*"]
+    }
   },
-  "include": ["src"]
+  // "include": ["", "vite.config.ts"]
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "vite.config.ts"
+  ],
+  "exclude": ["node_modules"]
 }
