chore: CRA에서 CNA로 마이그레이션

--- a/trip-talk/.gitignore
+++ b/trip-talk/.gitignore
@@ -302,3 +302,8 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/macos,visualstudiocode,react,windows,git,node,nextjs,dotenv
+
+# ...
+.next
+next-env.d.ts
+dist``
