--- a/Next/nextproject/next-app/tsconfig.json
+++ b/Next/nextproject/next-app/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts",  ".next/types/**/*.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/module.css", ".next/types/**/*.ts", "global.d.ts"],
   "exclude": ["node_modules"]
 }
