--- a/server/package.json
+++ b/server/package.json
@@ -20,15 +20,19 @@
         "test:e2e": "jest --config ./test/jest-e2e.json"
     },
     "dependencies": {
+        "@apollo/server": "^4.11.0",
+        "@nestjs/apollo": "^12.2.0",
         "@nestjs/common": "^10.0.0",
         "@nestjs/config": "^3.2.3",
         "@nestjs/core": "^10.0.0",
+        "@nestjs/graphql": "^12.2.0",
         "@nestjs/mapped-types": "*",
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.2",
         "@nestjs/typeorm": "^10.0.2",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
+        "graphql": "^16.9.0",
         "mongodb": "^5.9.2",
         "reflect-metadata": "^0.2.0",
         "rxjs": "^7.8.1",
