--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -9,26 +9,30 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.6.2",
     "@reduxjs/toolkit": "^2.2.7",
     "dotenv": "^16.4.5",
+    "graphql": "^15.8.0",
     "next": "14.2.13",
-    "react": "^18",
+    "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
-    "react-dom": "^18",
+    "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
     "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
-    "redux": "^5.0.1"
+    "redux": "^5.0.1",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@svgr/webpack": "^8.1.0",
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "^18.3.9",
+    "@types/react-dom": "^18.3.0",
     "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
+    "sass": "^1.79.3",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
