--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -9,6 +9,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "next": "^14.2.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
