--- a/메인캠프/maincamp/my-board/package.json
+++ b/메인캠프/maincamp/my-board/package.json
@@ -9,7 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.11.8",
     "@tailwindcss/typography": "^0.5.15",
+    "graphql": "^16.9.0",
     "next": "14.2.13",
     "pretendard": "^1.3.9",
     "react": "^18",
