--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,8 @@
 		"next": "14.2.12",
 		"pretendard": "^1.3.9",
 		"react": "^18.3.1",
-		"react-dom": "^18.3.1"
+		"react-dom": "^18.3.1",
+		"swr": "^2.2.5"
 	},
 	"devDependencies": {
 		"@types/node": "^20",
