--- a/server/package.json
+++ b/server/package.json
@@ -30,6 +30,8 @@
         "@nestjs/platform-express": "^10.0.0",
         "@nestjs/swagger": "^7.4.2",
         "@nestjs/typeorm": "^10.0.2",
+        "@types/bcrypt": "^5.0.2",
+        "bcrypt": "^5.1.1",
         "class-transformer": "^0.5.1",
         "class-validator": "^0.14.1",
         "graphql": "^16.9.0",
