--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -11,10 +11,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.2",
     "@reduxjs/toolkit": "^2.2.7",
+    "@tanstack/react-table": "^8.20.5",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "graphql": "^15.8.0",
     "next": "14.2.13",
+    "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.3.1",
+    "react-datepicker": "^7.4.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
