--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
     "graphql": "^16.9.0",
-    "next": "^14.2.13",
+    "next": "14.2.8",
     "postcss": "8.4.45",
     "react": "18.3.1",
     "react-dom": "18.3.1",
