--- a/client/package.json
+++ b/client/package.json
@@ -6,11 +6,13 @@
 		"dev": "next dev",
 		"build": "next build",
 		"start": "next start",
-		"lint": "next lint"
+		"lint": "next lint",
+		"codegen": "graphql-codegen --config ./config/codegen.ts"
 	},
 	"dependencies": {
 		"@tailwindcss/typography": "^0.5.15",
 		"axios": "^1.7.7",
+		"graphql": "^16.9.0",
 		"next": "14.2.12",
 		"pretendard": "^1.3.9",
 		"react": "^18.3.1",
@@ -18,6 +20,7 @@
 		"swr": "^2.2.5"
 	},
 	"devDependencies": {
+		"@graphql-codegen/cli": "^5.0.2",
 		"@types/node": "^20",
 		"@types/react": "^18",
 		"@types/react-dom": "^18",
