--- a/02-main_camp/Day25/package.json
+++ b/02-main_camp/Day25/package.json
@@ -6,10 +6,12 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@graphql-codegen/cli": "^5.0.2",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
@@ -23,6 +25,6 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
