--- a/Next/nextproject/next-app/tsconfig.json
+++ b/Next/nextproject/next-app/tsconfig.json
@@ -21,6 +21,6 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.module.css", ".next/types/**/*.ts", "global.d.ts"],
+  "include": ["next-env.d.ts", "**/*.ts", "**/*.module.css", ".next/types/**/*.ts", "global.d.ts", "src/app/component/board-write/valid.tsx"],
   "exclude": ["node_modules"]
 }
