--- a/03-trip/03-03-Next/package.json
+++ b/03-trip/03-03-Next/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@apollo/client": "^3.11.8",
+        "@svgr/webpack": "^8.1.0",
         "next": "14.2.13",
         "react": "^18",
         "react-dom": "^18"
