--- a/Next/nextproject/next-app/tsconfig.json
+++ b/Next/nextproject/next-app/tsconfig.json
@@ -21,6 +21,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.module.css", ".next/types/**/*.ts", "global.d.ts", "src/app/component/board-write/valid.tsx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.module.css",
+    ".next/types/**/*.ts",
+    "global.d.ts",
+    "src/app/component/board-write/valid.tsx",
+    "src/app/component/board-detail/comment-write/hook.ts"
+  ],
   "exclude": ["node_modules"]
 }
