--- a/homework-intermediate/day28/package.json
+++ b/homework-intermediate/day28/package.json
@@ -14,6 +14,7 @@
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
     "@types/react-dom": "18.3.0",
+    "antd": "^5.21.2",
     "autoprefixer": "^10.4.20",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.8",
@@ -22,11 +23,13 @@
     "postcss": "^8.4.47",
     "react": "18.3.1",
     "react-dom": "18.3.1",
+    "swiper": "^11.1.14",
     "tailwindcss": "^3.4.13",
     "typescript": "5.5.4"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
-    "@types/tailwindcss": "^3.1.0"
+    "@types/tailwindcss": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.6.8"
   }
 }
