--- a/homework-intermediate/day28/package.json
+++ b/homework-intermediate/day28/package.json
@@ -10,6 +10,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@types/node": "22.5.4",
     "@types/react": "18.3.5",
