--- a/client/package.json
+++ b/client/package.json
@@ -11,14 +11,20 @@
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
+		"@radix-ui/react-icons": "^1.3.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"axios": "^1.7.7",
+		"class-variance-authority": "^0.7.0",
+		"clsx": "^2.1.1",
 		"graphql": "^16.9.0",
+		"lucide-react": "^0.451.0",
 		"next": "14.2.12",
 		"pretendard": "^1.3.9",
 		"react": "^18.3.1",
 		"react-dom": "^18.3.1",
-		"swr": "^2.2.5"
+		"swr": "^2.2.5",
+		"tailwind-merge": "^2.5.3",
+		"tailwindcss-animate": "^1.0.7"
 	},
 	"devDependencies": {
 		"@graphql-codegen/cli": "^5.0.2",
