--- a/client/package.json
+++ b/client/package.json
@@ -12,10 +12,12 @@
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-slot": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"axios": "^1.7.7",
 		"class-variance-authority": "^0.7.0",
 		"clsx": "^2.1.1",
+		"embla-carousel-react": "^8.3.0",
 		"graphql": "^16.9.0",
 		"lucide-react": "^0.451.0",
 		"next": "14.2.12",
