--- a/react-homework/day28/package.json
+++ b/react-homework/day28/package.json
@@ -11,6 +11,11 @@
   },
   "dependencies": {
     "@apollo/client": "^3.11.8",
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/icons-material": "^6.1.3",
+    "@mui/material": "^6.1.3",
+    "antd": "^5.21.2",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
