--- a/server/codegen.yml
+++ b/server/codegen.yml
@@ -1,5 +1,7 @@
+overwrite: true
 schema: 'http://localhost:8080/graphql'
-documents: 'src/**/*.graphql'
+documents: 'src/graphql/**/*.graphql'
+
 generates:
     src/generated/graphql.ts:
         plugins:
