--- a/client/package.json
+++ b/client/package.json
@@ -7,10 +7,11 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"codegen": "graphql-codegen --config ./config/codegen.ts"
+		"codegen": "graphql-codegen --config ./config/codegen.yml"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
+		"@graphql-codegen/client-preset": "^4.4.0",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
