--- a/next_과제/package.json
+++ b/next_과제/package.json
@@ -10,16 +10,18 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
+    "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
-    "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
+    "antd": "^5.21.2",
+    "antd-style": "^3.7.0",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "graphql": "^15.8.0",
     "next": "14.2.13",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.3.1",
-    "react-datepicker": "^7.4.0",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -34,7 +36,6 @@
     "@types/node": "^20",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
-    "daisyui": "^4.12.10",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
