--- a/client/config/codegen.yml
+++ b/client/config/codegen.yml
@@ -1,10 +1,14 @@
 overwrite: true
 schema: "http://172.16.2.165:8080/graphql" 
-documents: "src/graphql/**/*.graphql" 
+documents: "src/graphql/**/*.graphql"  
 generates:
-  ../src/graphql/generated/:
+   ../src/graphql/generated/graphql.ts: 
     preset: client-preset
     plugins:
       - typescript
       - typescript-operations
-      - typed-document-node
+      - typed-document-node 
+config:
+  withHooks: true  
+  withComponent: false
+  withHOC: false
