--- a/client/package.json
+++ b/client/package.json
@@ -7,11 +7,12 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"codegen": "graphql-codegen --config ./config/codegen.yml"
+		"codegen": "graphql-codegen --config ./config/codegen.ts"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
 		"@graphql-codegen/client-preset": "^4.4.0",
+		"@graphql-codegen/typescript-react-apollo": "^4.3.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
