--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
 		"@graphql-codegen/client-preset": "^4.4.0",
+		"@graphql-codegen/fragment-matcher": "^5.0.2",
 		"@graphql-codegen/typescript-react-apollo": "^4.3.2",
 		"@radix-ui/react-icons": "^1.3.0",
 		"@radix-ui/react-slot": "^1.1.0",
