--- a/study/package.json
+++ b/study/package.json
@@ -10,9 +10,11 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/nextjs-registry": "^1.0.1",
     "@apollo/client": "^3.6.2",
     "@reduxjs/toolkit": "^2.2.7",
     "@tanstack/react-table": "^8.20.5",
+    "antd": "^5.21.3",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "graphql": "^15.8.0",
