--- a/client/package.json
+++ b/client/package.json
@@ -27,6 +27,7 @@
 		"next": "14.2.12",
 		"pretendard": "^1.3.9",
 		"react": "^18.3.1",
+		"react-daum-postcode": "^3.1.3",
 		"react-dom": "^18.3.1",
 		"swr": "^2.2.5",
 		"tailwind-merge": "^2.5.3",
