--- a/my-app/package.json
+++ b/my-app/package.json
@@ -16,7 +16,9 @@
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
