--- a/homework-intermediate/day29/package.json
+++ b/homework-intermediate/day29/package.json
@@ -23,6 +23,7 @@
     "next": "14.2.8",
     "postcss": "^8.4.47",
     "react": "18.3.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "18.3.1",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.13",
