--- a/homework-intermediate/day29/package.json
+++ b/homework-intermediate/day29/package.json
@@ -25,6 +25,7 @@
     "react": "18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "18.3.1",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
     "tailwindcss": "^3.4.13",
     "typescript": "5.5.4"
