--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -10,7 +10,9 @@
     "codegen": " graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
+    "antd": "^5.21.3",
     "bootstrap": "^5.3.3",
     "flatpickr": "^4.6.13",
     "graphql": "^16.9.0",
@@ -19,7 +21,8 @@
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.4.0",
     "react-dom": "^18",
-    "react-flatpickr": "^3.10.13"
+    "react-flatpickr": "^3.10.13",
+    "swiper": "^11.1.14"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
