--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -10,6 +10,7 @@
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
+    "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
     "graphql": "^16.9.0",
