--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@graphql-codegen/cli": "^5.0.2",
+    "antd": "^5.21.3",
     "graphql": "^16.9.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
