--- a/03-trip/03-03-Next/package.json
+++ b/03-trip/03-03-Next/package.json
@@ -16,7 +16,9 @@
         "antd": "^5.21.3",
         "next": "14.2.13",
         "react": "^18",
+        "react-daum-postcode": "^3.1.3",
         "react-dom": "^18",
+        "styled-components": "^6.1.13",
         "swiper": "^11.1.14"
     },
     "devDependencies": {
@@ -24,11 +26,12 @@
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
+        "autoprefixer": "^10.4.20",
         "eslint": "^8",
         "eslint-config-next": "14.2.13",
         "graphql": "^16.9.0",
-        "postcss": "^8",
-        "tailwindcss": "^3.4.1",
+        "postcss": "^8.4.47",
+        "tailwindcss": "^3.4.13",
         "typescript": "^5.6.2"
     }
 }
