--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -16,6 +16,7 @@
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
