--- a/02-main_camp/Day29/package.json
+++ b/02-main_camp/Day29/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
     "slick-carousel": "^1.8.1",
