[241012] client progress.. suspense / promise / component composition / hoc / custom hook / generic..

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -28,7 +28,7 @@
 		"**/*.ts",
 		"**/*.tsx",
 		".next/types/**/*.ts",
-		"src/utils/checkPromiseStatus.js"
+		"src/utils/wrapPromise.ts"
 	],
 	"exclude": ["node_modules"]
 }
