--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -17,8 +17,12 @@
     "graphql": "^16.9.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
-    "swiper": "^11.1.14"
+    "react-player": "^2.16.0",
+    "react-youtube": "^10.1.0",
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0-rc.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.9.0",
