--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -18,8 +18,11 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.26.2",
     "react-slick": "^0.30.2",
+    "react-tooltip": "^5.28.0",
+    "react-youtube": "^10.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
@@ -27,6 +30,7 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-js-pagination": "^3.0.7",
     "@types/react-slick": "^0.23.13",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
