--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -20,6 +20,7 @@
     "react": "^18",
     "react-bootstrap": "^2.10.4",
     "react-datepicker": "^7.4.0",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "swiper": "^11.1.14"
