--- a/02-main_camp/Day29/package.json
+++ b/02-main_camp/Day29/package.json
@@ -20,6 +20,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-slick": "^0.30.2",
+    "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
     "swiper": "^11.1.14"
   },
