--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,9 @@
 {
   "compilerOptions": {
-    "baseUrl": "src",
-    "paths": { "@assets/*": ["assets/*"] },
+    "baseUrl": ".",
+    "paths": { 
+      "@/*": ["./src/*"]
+    },
     "target": "es5",
     "lib": ["dom", "dom.iterable", "esnext"],
     "allowJs": true,
