--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
 		"@graphql-codegen/fragment-matcher": "^5.0.2",
 		"@graphql-codegen/typescript-react-apollo": "^4.3.2",
 		"@radix-ui/react-icons": "^1.3.0",
+		"@radix-ui/react-select": "^2.1.2",
 		"@radix-ui/react-slot": "^1.1.0",
 		"@tailwindcss/typography": "^0.5.15",
 		"axios": "^1.7.7",
