--- a/study/package.json
+++ b/study/package.json
@@ -18,6 +18,7 @@
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "graphql": "^15.8.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "quill-image-resize-module-ts": "^3.0.3",
     "react": "^18.3.1",
@@ -25,6 +26,7 @@
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill-new": "^3.3.2",
     "react-redux": "^9.1.2",
     "redux": "^5.0.1",
@@ -33,6 +35,7 @@
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
     "@svgr/webpack": "^8.1.0",
+    "@types/lodash": "^4.17.10",
     "@types/node": "^20",
     "@types/react": "^18.3.9",
     "@types/react-dom": "^18.3.0",
