--- a/02-main_camp/Day32/package.json
+++ b/02-main_camp/Day32/package.json
@@ -19,6 +19,7 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-slick": "^0.30.2",
     "react-youtube": "^10.1.0",
     "slick-carousel": "^1.8.1",
