--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -17,7 +17,9 @@
     "graphql": "^16.9.0",
     "next": "^14.2.13",
     "react": "^18.3.1",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
