--- a/trip-talk/package.json
+++ b/trip-talk/package.json
@@ -19,6 +19,7 @@
     "react": "^18.3.1",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18.3.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
     "react-youtube": "^10.1.0",
     "swiper": "^11.1.14",
