DAY33필수과제제출_임윤정

--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18",
     "react-flatpickr": "^3.10.13",
     "react-infinite-scroll-component": "^6.1.0",
+    "react-player": "^2.16.0",
     "swiper": "^11.1.14"
   },
   "devDependencies": {
