[241019] client refactory create form action

--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -29,6 +29,6 @@
 		"**/*.tsx",
 		".next/types/**/*.ts",
 		"src/utils/wrapPromise.ts"
-	],
+, "src/utils/filterFormRequire.js"	],
 	"exclude": ["node_modules"]
 }
