[241019] client complete upload image S3

--- a/client/package.json
+++ b/client/package.json
@@ -7,7 +7,7 @@
 		"build": "next build",
 		"start": "next start",
 		"lint": "next lint",
-		"codegen": "graphql-codegen --config ./config/codegen_config.ts"
+		"codegen": "graphql-codegen --config ./config/codegenConfig.ts"
 	},
 	"dependencies": {
 		"@apollo/client": "^3.11.8",
