--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -5,16 +5,19 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "ts-node index.ts",
     "lint": "next lint",
     "codegen": "graphql-codegen --config codegen.ts"
   },
   "dependencies": {
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
+    "@apollo/server": "^4.11.0",
     "antd": "^5.21.2",
+    "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
+    "pg": "^8.13.0",
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
@@ -24,10 +27,13 @@
     "react-slick": "^0.30.2",
     "react-tooltip": "^5.28.0",
     "react-youtube": "^10.1.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@tsconfig/recommended": "^1.0.7",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -37,6 +43,6 @@
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.6.3"
   }
 }
