이미지업로드 구현

--- a/my-app/package.json
+++ b/my-app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
     "react": "^18",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
