--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -13,7 +13,9 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
+    "@types/apollo-upload-client": "^18.0.0",
     "antd": "^5.21.2",
+    "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
     "next": "14.2.13",
