--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -14,10 +14,12 @@
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.12",
     "antd": "^5.21.2",
     "apollo-upload-client": "^18.0.1",
     "firebase": "^10.14.1",
     "graphql": "^16.9.0",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "pg": "^8.13.0",
     "react": "^18",
