[241030]DAY42필수과제제출_임윤정

--- a/homework/my-app/package.json
+++ b/homework/my-app/package.json
@@ -28,7 +28,8 @@
     "react-flatpickr": "^3.10.13",
     "react-infinite-scroll-component": "^6.1.0",
     "react-player": "^2.16.0",
-    "swiper": "^11.1.14"
+    "swiper": "^11.1.14",
+    "zustand": "^5.0.0"
   },
   "devDependencies": {
     "@graphql-codegen/cli": "^5.0.2",
