--- a/class-practice/my-app/.eslintrc.json
+++ b/class-practice/my-app/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
-    "@typescript-eslint/no-explicit-any": "warn"
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/display-name": "off"
   }
-  
 }
