--- a/homework/my-app/.eslintrc.json
+++ b/homework/my-app/.eslintrc.json
@@ -2,7 +2,7 @@
   "extends": ["next/core-web-vitals", "next/typescript"],
   "rules": {
     "@typescript-eslint/no-explicit-any": "warn",
-    "@typescript-eslint/no-unused-vars": "warn"
-    
+    "@typescript-eslint/no-unused-vars": "warn",
+    "react/display-name": "off"
   }
 }
