--- a/Next/nextproject/next-app/.eslintrc.json
+++ b/Next/nextproject/next-app/.eslintrc.json
@@ -1,4 +1,7 @@
 {
   "extends": ["next/core-web-vitals", "next/typescript"],
-  "rules": { "@typescript-eslint/no-explicit-any": "warn" }
+  "rules": {
+    "@typescript-eslint/no-explicit-any": "warn",
+    "react/display-name": "off"
+  }
 }
