--- a/Next/nextproject/next-app/package.json
+++ b/Next/nextproject/next-app/package.json
@@ -13,6 +13,7 @@
     "@ant-design/icons": "^5.5.1",
     "@apollo/client": "^3.11.8",
     "@apollo/server": "^4.11.0",
+    "@hookform/resolvers": "^3.9.1",
     "@types/apollo-upload-client": "^18.0.0",
     "@types/lodash": "^4.17.12",
     "antd": "^5.21.2",
@@ -26,6 +27,7 @@
     "react": "^18",
     "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
+    "react-hook-form": "^7.53.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-js-pagination": "^3.0.3",
     "react-router-dom": "^6.26.2",
@@ -35,6 +37,7 @@
     "swiper": "^11.1.14",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
+    "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
   "devDependencies": {
