--- a/server/docker-compose.prod.yml
+++ b/server/docker-compose.prod.yml
@@ -1,12 +1,13 @@
-version: '4.0'
+version: '3.8'
 services:
     app:
         build:
             context: .
             dockerfile: Dockerfile
         ports:
-            - '${PORT}:${PORT}'
-        env_file: .env.development
+            - '8080:8080'
+        env_file:
+            - .env.production
         depends_on:
             - postgres
             - mongo
@@ -23,26 +24,16 @@ services:
             POSTGRES_USER: ${POSTGRE_DB_USERNAME}
             POSTGRES_PASSWORD: ${POSTGRE_DB_PASSWORD}
             POSTGRES_DB: ${POSTGRE_DB_DATABASE}
-        ports:
-            - '${POSTGRE_DB_PORT}:${POSTGRE_DB_PORT}'
-        volumes:
-            - postgres-data:/var/lib/postgresql/data
         networks:
             - my_network
 
     mongo:
         image: mongo:5.0
-        ports:
-            - '${MONGO_DB_PORT}:${MONGO_DB_PORT}'
-        volumes:
-            - mongo-data:/data/db
         networks:
             - my_network
 
     redis:
         image: redis:6-alpine
-        ports:
-            - '6379:6379'
         networks:
             - my_network
 
@@ -50,17 +41,11 @@ services:
         image: docker.elastic.co/elasticsearch/elasticsearch:7.17.4
         environment:
             - discovery.type=single-node
-        ports:
-            - '9200:9200'
-        volumes:
-            - es-data:/usr/share/elasticsearch/data
         networks:
             - my_network
 
     logstash:
         image: docker.elastic.co/logstash/logstash:7.17.4
-        ports:
-            - '5044:5044'
         volumes:
             - ./logstash.conf:/usr/share/logstash/pipeline/logstash.conf
         depends_on:
@@ -70,8 +55,6 @@ services:
 
     kibana:
         image: docker.elastic.co/kibana/kibana:7.17.4
-        ports:
-            - '5601:5601'
         environment:
             - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
         depends_on:
