[241126] 김민정 section01 필수과제 제출

--- a/side-project/package.json
+++ b/side-project/package.json
@@ -21,11 +21,14 @@
     "codegen": "^0.1.0",
     "graphql": "^16.9.0",
     "graphql-request": "^7.1.2",
+    "lodash": "^4.17.21",
     "next": "14.2.13",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-quill": "^2.0.0",
+    "react-window": "^1.8.10",
     "zod": "^3.23.8",
     "zustand": "^5.0.0"
   },
@@ -33,9 +36,11 @@
     "@graphql-codegen/cli": "^5.0.2",
     "@graphql-codegen/near-operation-file-preset": "^3.0.0",
     "@types/apollo-upload-client": "^18.0.0",
+    "@types/lodash": "^4.17.13",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-window": "^1.8.8",
     "eslint": "^8",
     "eslint-config-next": "14.2.13",
     "postcss": "^8",
